unpackaged/main/default/objects/Campaign/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alchemists</fullName>
            </value>
            <value>
                <fullName>Channel Partner Leadership</fullName>
            </value>
            <value>
                <fullName>Dealer Alchemists</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Full Database</fullName>
            </value>
            <value>
                <fullName>Homeowners</fullName>
            </value>
            <value>
                <fullName>Independent Alchemists</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>