unpackaged/main/default/objects/Campaign/fields/Average_Cost_per_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Average_Cost_per_Opportunity__c</fullName>
    <formula>ActualCost  /  NumberOfOpportunities</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Cost per Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>