unpackaged/main/default/objects/Campaign/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Form or medium</description>
    <inlineHelpText>Form or medium</inlineHelpText>
    <label>Content</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blog Post</fullName>
            </value>
            <value>
                <fullName>Images</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Powerpoint Slides</fullName>
            </value>
            <value>
                <fullName>Script</fullName>
            </value>
            <value>
                <fullName>Social Post</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>White Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>