unpackaged/main/default/objects/Campaign/fields/Expected_Click_Rate__c.field-meta.xml
<CustomField>
    <fullName>Expected_Click_Rate__c</fullName>
    <label>Expected Click Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>