unpackaged/main/default/objects/Campaign/fields/Number_of_Expected_Leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Expected_Leads__c</fullName>
    <label>Number of Expected Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>