unpackaged/main/default/objects/Campaign/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Post Decision</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>