unpackaged/main/default/objects/Campaign/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Triggered</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>