unpackaged/main/default/objects/Campaign/fields/Total_Campaign_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Expenses__c</fullName>
    <label>Total Campaign Expenses</label>
    <summarizedField>Campaign_Expense__c.Cost__c</summarizedField>
    <summaryForeignKey>Campaign_Expense__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>