unpackaged/main/default/objects/Campaign/listViews/AllCampaigns.listView-meta.xml
<ListView>
    <fullName>AllCampaigns</fullName>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>AMOUNT_WON</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Campaigns</label>
</ListView>