unpackaged/main/default/objects/Campaign/listViews/Campaign_Summary.listView-meta.xml
<ListView>
    <fullName>Campaign_Summary</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Campaign Summary</label>
</ListView>