unpackaged/main/default/objects/Campaign/listViews/MyActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>MyActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_SENT</columns>
    <columns>CAMPAIGN.EXP_RESPONSE</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>Average_Cost_per_Opportunity__c</columns>
    <columns>AMOUNT_WON</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CAMPAIGN.EXP_REVENUE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Active Campaigns</label>
</ListView>