unpackaged/main/default/objects/Campaign/listViews/Parent_Child_View.listView-meta.xml
<ListView>
    <fullName>Parent_Child_View</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>AMOUNT_ALL</columns>
    <filterScope>Everything</filterScope>
    <label>Parent Child View</label>
</ListView>