unpackaged/main/default/objects/Campaign/listViews/Upcoming_Campaigns.listView-meta.xml
<ListView>
    <fullName>Upcoming_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Audience__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Content__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Timing__c</columns>
    <columns>Purpose__c</columns>
    <columns>CAMPAIGN.NUM_SENT</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:60</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>notEqual</operation>
        <value>Aborted,Completed</value>
    </filters>
    <label>Upcoming Campaigns 2018</label>
</ListView>