unpackaged/main/default/objects/Campaign/listViews/X2017_Campaigns.listView-meta.xml
<ListView>
    <fullName>X2017_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Number_of_Expected_Leads__c</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>.17</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>notEqual</operation>
        <value>Aborted</value>
    </filters>
    <label>2017 Campaigns</label>
</ListView>