unpackaged/main/default/objects/Campaign/listViews/X2018_Campaigns_Planned.listView-meta.xml
<ListView>
    <fullName>X2018_Campaigns_Planned</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Audience__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Content__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>Timing__c</columns>
    <columns>Purpose__c</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.NUM_SENT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>In Progress,Planned,Completed</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2017</value>
    </filters>
    <label>2018 Campaigns</label>
</ListView>